<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.5</version>
    <relativePath/>
  </parent>
  <groupId>kr.sprouts.framework.autoconfigure</groupId>
  <artifactId>sprouts-security-credential-provider-spring-boot-starter</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <name>sprouts-security-credential-provider-spring-boot-starter</name>
  <properties>
    <java.version>17</java.version>
    <!-- dependency -->
    <sprouts.security.credential.version>0.1.0-SNAPSHOT</sprouts.security.credential.version>
  </properties>
  <repositories>
    <!-- personal-repository -->
    <repository>
      <id>personal-repository</id>
      <url>https://nexus.devops.sprouts.kr/repository/maven/</url>
    </repository>
  </repositories>
  <dependencies>
    <!-- auto configuration -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-autoconfigure</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-autoconfigure-processor</artifactId>
    </dependency>
    <!-- logging -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-to-slf4j</artifactId>
    </dependency>
    <!-- security-credential -->
    <dependency>
      <groupId>kr.sprouts.framework.library</groupId>
      <artifactId>sprouts-security-credential</artifactId>
      <version>${sprouts.security.credential.version}</version>
    </dependency>
    <!-- lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <!-- test -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
